# interview-task

./: .gitignore  CMakeLists.txt  README.md
source/: client.cpp  client.h  code.cpp  code.h  main.cpp  mclient.cpp  mserver.cpp  server.cpp  server.h
